// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-set > a t-set body holding a component can be output in a loop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, createComponent, prepareList, safeOutput, withKey } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  function value1(ctx, node, key = "") {
    return comp1({}, key + \`\\u00021\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    const ctx1 = ctx;
    const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['this'].items);
    for (let i1 = 0; i1 < l_block3; i1++) {
      let ctx = Object.create(ctx1);
      ctx["n"] = k_block3[i1];
      const key1 = ctx['n'];
      c_block3[i1] = withKey(safeOutput(ctx['v'], node, key, "\\u00023", 1, key1), key1);
    }
    const b3 = list(c_block3);
    return block1([], [b3]);
  }
}"
`;

exports[`t-set > a t-set body holding a component can be output in a loop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<i>c</i>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-set > a t-set body holding a component can be output twice 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, createComponent, safeOutput } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function value1(ctx, node, key = "") {
    return comp1({}, key + \`\\u00021\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    const b3 = safeOutput(ctx['v'], node, key, "\\u00023");
    const b4 = safeOutput(ctx['v'], node, key, "\\u00024");
    return block1([], [b3, b4]);
  }
}"
`;

exports[`t-set > a t-set body holding a component can be output twice 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<i>c</i>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-set > a t-set body holding a component cannot be stringified 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, createComponent, attrValue } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<p block-attribute-0="title"/>\`);
  
  function value1(ctx, node, key = "") {
    const b2 = comp1({}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    let attr1 = attrValue(ctx['v']);
    return block3([attr1]);
  }
}"
`;

exports[`t-set > a t-set body holding a component cannot be stringified 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<i>c</i>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-set > a t-set body holding a component keeps one component per site and iteration, nested loops included 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, createComponent, safeOutput, prepareList, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function value1(ctx, node, key = "") {
    return comp1({}, key + \`\\u00021\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    const b3 = safeOutput(ctx['this'].state.n, node, key, "\\u00023");
    const ctx1 = ctx;
    const [k_block4, v_block4, l_block4, c_block4] = prepareList([1,2]);
    for (let i1 = 0; i1 < l_block4; i1++) {
      let ctx = Object.create(ctx1);
      ctx["a"] = k_block4[i1];
      const key1 = ctx['a'];
      const skey1 = keyOf(key1);
      const ctx2 = ctx;
      const [k_block6, v_block6, l_block6, c_block6] = prepareList(['x','y']);
      for (let i2 = 0; i2 < l_block6; i2++) {
        let ctx = Object.create(ctx2);
        ctx["b"] = k_block6[i2];
        const key2 = ctx['b'];
        c_block6[i2] = withKey(safeOutput(ctx['v'], node, key, "\\u00024", 2, key1, key2), key2);
      }
      const b6 = list(c_block6);
      const ctx3 = ctx;
      const [k_block8, v_block8, l_block8, c_block8] = prepareList([1]);
      for (let i2 = 0; i2 < l_block8; i2++) {
        let ctx = Object.create(ctx3);
        ctx["c"] = k_block8[i2];
        const key2 = ctx['c'];
        const skey2 = keyOf(key2);
        const ctx4 = ctx;
        const [k_block9, v_block9, l_block9, c_block9] = prepareList([1]);
        for (let i3 = 0; i3 < l_block9; i3++) {
          let ctx = Object.create(ctx4);
          ctx["d"] = k_block9[i3];
          const key3 = ctx['d'];
          const skey3 = keyOf(key3);
          const ctx5 = ctx;
          const [k_block10, v_block10, l_block10, c_block10] = prepareList([{},{}]);
          for (let i4 = 0; i4 < l_block10; i4++) {
            let ctx = Object.create(ctx5);
            ctx["e"] = k_block10[i4];
            ctx["e_index"] = i4;
            const key4 = ctx['e_index'];
            const skey4 = keyOf(key4);
            c_block10[i4] = withKey(safeOutput(ctx['v'], node, key + \`\\u00025\\u0002:\${skey1}\\u0002:\${skey2}\\u0002:\${skey3}\\u0002:\${skey4}\`, ""), key4);
          }
          c_block9[i3] = withKey(list(c_block10), key3);
        }
        c_block8[i2] = withKey(list(c_block9), key2);
      }
      const b8 = list(c_block8);
      c_block4[i1] = withKey(multi([b6, b8]), key1);
    }
    const b4 = list(c_block4);
    return block1([], [b3, b4]);
  }
}"
`;

exports[`t-set > a t-set body holding a component keeps one component per site and iteration, nested loops included 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<i>c</i>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-set > a t-set in an ended loop does not change scoping in a later loop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, withKey, safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList([1,2]);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["j"] = k_block1[i1];
      const key1 = ctx['j'];
      const ctx2 = ctx;
      const [k_block3, v_block3, l_block3, c_block3] = prepareList([7]);
      for (let i2 = 0; i2 < l_block3; i2++) {
        let ctx = Object.create(ctx2);
        ctx["k"] = k_block3[i2];
        const key2 = ctx['k'];
        ctx["x"] = ctx['k'];
        c_block3[i2] = withKey(text(\`k\`), key2);
      }
      const b3 = list(c_block3);
      const b5 = text(\`[\`);
      const b6 = safeOutput(ctx['x'], node, key, "\\u00021", 1, key1);
      const b7 = text(\`]\`);
      c_block1[i1] = withKey(multi([b3, b5, b6, b7]), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`t-set > a t-set in an ended loop does not change scoping in a later loop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, withKey, safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList([0]);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["i"] = k_block2[i1];
      const key1 = ctx['i'];
      ctx["x"] = ctx['i'];
      c_block2[i1] = withKey(text(\`i\`), key1);
    }
    const b2 = list(c_block2);
    const ctx2 = ctx;
    const [k_block4, v_block4, l_block4, c_block4] = prepareList([1,2]);
    for (let i1 = 0; i1 < l_block4; i1++) {
      let ctx = Object.create(ctx2);
      ctx["j"] = k_block4[i1];
      const key1 = ctx['j'];
      const ctx3 = ctx;
      const [k_block6, v_block6, l_block6, c_block6] = prepareList([7]);
      for (let i2 = 0; i2 < l_block6; i2++) {
        let ctx = Object.create(ctx3);
        ctx["k"] = k_block6[i2];
        const key2 = ctx['k'];
        ctx["x"] = ctx['k'];
        c_block6[i2] = withKey(text(\`k\`), key2);
      }
      const b6 = list(c_block6);
      const b8 = text(\`[\`);
      const b9 = safeOutput(ctx['x'], node, key, "\\u00021", 1, key1);
      const b10 = text(\`]\`);
      c_block4[i1] = withKey(multi([b6, b8, b9, b10]), key1);
    }
    const b4 = list(c_block4);
    return multi([b2, b4]);
  }
}"
`;

exports[`t-set > a variable may be named await or async 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2, b3;
    ctx["await"] = ctx['v'];
    ctx["async"] = 2;
    b2 = safeOutput(ctx['await'].x, node, key, "\\u00021");
    if (ctx['await'].x&&ctx['async']) {
      b3 = safeOutput(ctx['async'], node, key, "\\u00022");
    }
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-set > an attribute of a t-set body holding only text is that text 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, safeOutput, attrValue } = helpers;
  
  let block2 = createBlock(\`<p block-attribute-0="title" block-attribute-1="aria-label"/>\`);
  
  function value1(ctx, node, key = "") {
    return safeOutput(ctx['y'], node, key, "\\u00021");
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["x"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    let attr1 = attrValue(ctx['x']);
    let attr2 = \`L: \${ctx['x']}\`;
    return block2([attr1, attr2]);
  }
}"
`;

exports[`t-set > an attribute of a t-set body holding only text is that text 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, safeOutput, attrValue } = helpers;
  
  let block4 = createBlock(\`<p block-attribute-0="title" block-attribute-1="aria-label"/>\`);
  
  function value1(ctx, node, key = "") {
    const b2 = text(\`A: \`);
    const b3 = safeOutput(ctx['y'], node, key, "\\u00021");
    return multi([b2, b3]);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["x"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    let attr1 = attrValue(ctx['x']);
    let attr2 = \`L: \${ctx['x']}\`;
    return block4([attr1, attr2]);
  }
}"
`;

exports[`t-set > an attribute of a t-set body holding only text is that text 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, attrValue } = helpers;
  
  let block4 = createBlock(\`<p block-attribute-0="title" block-attribute-1="aria-label"/>\`);
  
  function value1(ctx, node, key = "") {
    let b2, b3;
    if (ctx['y']) {
      b2 = text(\`A & B\`);
    } else {
      b3 = text(\`C\`);
    }
    return multi([b2, b3]);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["x"] = new LazyValue(value1, ctx, this, node, key + \`\\u00021\`);
    let attr1 = attrValue(ctx['x']);
    let attr2 = \`L: \${ctx['x']}\`;
    return block4([attr1, attr2]);
  }
}"
`;

exports[`t-set > an attribute of a t-set body holding only text is that text 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, safeOutput, attrValue } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  let block3 = createBlock(\`<p block-attribute-0="title" block-attribute-1="aria-label"/>\`);
  
  function value1(ctx, node, key = "") {
    const b2 = safeOutput(ctx['y'], node, key, "\\u00021");
    return block1([], [b2]);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["x"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    let attr1 = attrValue(ctx['x']);
    let attr2 = \`L: \${ctx['x']}\`;
    return block3([attr1, attr2]);
  }
}"
`;

exports[`t-set > body with backslash at top level 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = \`\\\\\`;
    return safeOutput(ctx['value'], node, key, "\\u00021");
  }
}"
`;

exports[`t-set > body with backtick at top-level 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = \`\\\`\`;
    return safeOutput(ctx['value'], node, key, "\\u00021");
  }
}"
`;

exports[`t-set > body with interpolation sigil at top level 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = \`\\\${very cool}\`;
    return safeOutput(ctx['value'], node, key, "\\u00021");
  }
}"
`;

exports[`t-set > evaluate value expression 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = 1+2;
    const b2 = safeOutput(ctx['value'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > evaluate value expression, part 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = ctx['somevariable']+2;
    const b2 = safeOutput(ctx['value'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > set from attribute literal (no outside div) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = 'ok';
    return safeOutput(ctx['value'], node, key, "\\u00021");
  }
}"
`;

exports[`t-set > set from attribute literal 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = 'ok';
    const b2 = safeOutput(ctx['value'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > set from attribute lookup 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["stuff"] = ctx['value'];
    const b2 = safeOutput(ctx['stuff'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > set from body literal (with t-if/t-else 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, safeOutput } = helpers;
  
  function value1(ctx, node, key = "") {
    let b2, b3;
    if (ctx['condition']) {
      b2 = text(\`true\`);
    } else {
      b3 = text(\`false\`);
    }
    return multi([b2, b3]);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = new LazyValue(value1, ctx, this, node, key + \`\\u00021\`);
    return safeOutput(ctx['value'], node, key, "\\u00022");
  }
}"
`;

exports[`t-set > set from body literal 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = \`ok\`;
    return safeOutput(ctx['value'], node, key, "\\u00021");
  }
}"
`;

exports[`t-set > set from body lookup 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  function value1(ctx, node, key = "") {
    return safeOutput(ctx['value'], node, key, "\\u00021");
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["stuff"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    const b3 = safeOutput(ctx['stuff'], node, key, "\\u00023");
    return block1([], [b3]);
  }
}"
`;

exports[`t-set > set from empty body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["stuff"] = null;
    const b2 = safeOutput(ctx['stuff'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set after a dom element is executed before event handlers 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['this'].logValue(ctx['val']);
  
  const block1_handlers = [hdlr_fn1];
  let block1 = createBlock(\`<button block-handler-0="click">log</button>\`, block1_handlers);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["val"] = 1;
    const b1 = block1([ctx], null, block1_handlers);
    ctx["val"] = 2;
    return b1;
  }
}"
`;

exports[`t-set > t-set and t-if 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2;
    ctx["v"] = ctx['value'];
    if (ctx['v']==='ok') {
      b2 = text(\`grimbergen\`);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set body is evaluated immediately 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block2 = createBlock(\`<span><block-child-0/></span>\`);
  
  function value1(ctx, node, key = "") {
    const b3 = safeOutput(ctx['v1'], node, key, "\\u00021");
    return block2([], [b3]);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v1"] = 'before';
    ctx["v2"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    ctx["v1"] = 'after';
    const b4 = safeOutput(ctx['v2'], node, key, "\\u00023");
    return block1([], [b4]);
  }
}"
`;

exports[`t-set > t-set body of only a comment 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>ok</span>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["x"] = null;
    return block1();
  }
}"
`;

exports[`t-set > t-set body of only a comment 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["x"] = 1;
    return safeOutput(ctx['x'], node, key, "\\u00021");
  }
}"
`;

exports[`t-set > t-set body of text with entities is a string 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = \`a > b\`;
    return safeOutput(ctx['v'].length, node, key, "\\u00021");
  }
}"
`;

exports[`t-set > t-set body of text with entities is a string 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = \`a b\`;
    return safeOutput(ctx['v'], node, key, "\\u00021");
  }
}"
`;

exports[`t-set > t-set can't alter from within callee 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, withoutZero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><block-child-1/><p><block-child-2/></p></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 'source';
    const b2 = safeOutput(ctx['iter'], node, key, "\\u00021");
    const b3 = callTemplate(\`sub\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00022\`);
    const b4 = safeOutput(ctx['iter'], node, key, "\\u00023");
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > t-set can't alter from within callee 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = safeOutput(ctx['iter'], node, key, "\\u00021");
    ctx["iter"] = 'called';
    const b3 = safeOutput(ctx['iter'], node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-set > t-set can't alter in t-call body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, zeroCtx, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><block-child-1/><p><block-child-2/></p></div>\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 'inCall';
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 'source';
    const b2 = safeOutput(ctx['iter'], node, key, "\\u00021");
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    const b3 = callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00022\`);
    const b4 = safeOutput(ctx['iter'], node, key, "\\u00023");
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > t-set can't alter in t-call body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = safeOutput(ctx['iter'], node, key, "\\u00021");
    ctx["iter"] = 'called';
    const b3 = safeOutput(ctx['iter'], node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-set > t-set does not modify render context existing key values 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = 35;
    const b2 = safeOutput(ctx['value'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set evaluates an expression only once 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = ctx['value']+' artois';
    const b2 = safeOutput(ctx['v'], node, key, "\\u00021");
    const b3 = safeOutput(ctx['v'], node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-set > t-set outside modified in t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, safeOutput, withKey } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><p>EndLoop: <block-child-1/></p></div>\`);
  let block3 = createBlock(\`<p>InLoop: <block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 0;
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(['a','b']);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["val"] = k_block2[i1];
      const key1 = ctx['val'];
      const b4 = safeOutput(ctx['iter'], node, key, "\\u00021", 1, key1);
      c_block2[i1] = withKey(block3([], [b4]), key1);
      ctx1["iter"] = ctx['iter']+1;
    }
    const b2 = list(c_block2);
    const b5 = safeOutput(ctx['iter'], node, key, "\\u00022");
    return block1([], [b2, b5]);
  }
}"
`;

exports[`t-set > t-set outside modified in t-foreach increment-after operator 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, safeOutput, withKey } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><p>EndLoop: <block-child-1/></p></div>\`);
  let block3 = createBlock(\`<p>InLoop: <block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 0;
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(['a','b']);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["val"] = k_block2[i1];
      const key1 = ctx['val'];
      const b4 = safeOutput(ctx['iter'], node, key, "\\u00021", 1, key1);
      c_block2[i1] = withKey(block3([], [b4]), key1);
      ctx1["iter"] = ctx['iter']++;
    }
    const b2 = list(c_block2);
    const b5 = safeOutput(ctx['iter'], node, key, "\\u00022");
    return block1([], [b2, b5]);
  }
}"
`;

exports[`t-set > t-set outside modified in t-foreach increment-before operator 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, safeOutput, withKey } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><p>EndLoop: <block-child-1/></p></div>\`);
  let block3 = createBlock(\`<p>InLoop: <block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 0;
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(['a','b']);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["val"] = k_block2[i1];
      const key1 = ctx['val'];
      const b4 = safeOutput(ctx['iter'], node, key, "\\u00021", 1, key1);
      c_block2[i1] = withKey(block3([], [b4]), key1);
      ctx1["iter"] = ++ctx['iter'];
    }
    const b2 = list(c_block2);
    const b5 = safeOutput(ctx['iter'], node, key, "\\u00022");
    return block1([], [b2, b5]);
  }
}"
`;

exports[`t-set > t-set should reuse variable if possible 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, safeOutput, withKey } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<div><span>v<block-child-0/></span></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = 1;
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['list']);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["elem"] = k_block2[i1];
      ctx["elem_index"] = i1;
      const key1 = ctx['elem_index'];
      const b4 = safeOutput(ctx['v'], node, key, "\\u00021", 1, key1);
      ctx1["v"] = ctx['elem'];
      c_block2[i1] = withKey(block3([], [b4]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set with content and sub t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  function value1(ctx, node, key = "") {
    const b3 = safeOutput(ctx['beep'], node, key, "\\u00021");
    const b4 = text(\` boop\`);
    return multi([b3, b4]);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["setvar"] = new LazyValue(value1, ctx, this, node, key + \`\\u00022\`);
    const b5 = safeOutput(ctx['setvar'], node, key, "\\u00023");
    return block1([], [b5]);
  }
}"
`;

exports[`t-set > t-set with t-value (falsy) and body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, safeOutput, withDefault } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block2 = createBlock(\`<span><block-child-0/></span>\`);
  
  function value1(ctx, node, key = "") {
    const b3 = safeOutput(ctx['v1'], node, key, "\\u00021");
    return block2([], [b3]);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v3"] = false;
    ctx["v1"] = 'before';
    ctx["v2"] = withDefault(ctx['v3'], new LazyValue(value1, ctx, this, node, key + \`\\u00022\`));
    ctx["v1"] = 'after';
    ctx["v3"] = true;
    const b4 = safeOutput(ctx['v2'], node, key, "\\u00023");
    return block1([], [b4]);
  }
}"
`;

exports[`t-set > t-set with t-value (truthy) and body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, safeOutput, withDefault } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block2 = createBlock(\`<span><block-child-0/></span>\`);
  
  function value1(ctx, node, key = "") {
    const b3 = safeOutput(ctx['v1'], node, key, "\\u00021");
    return block2([], [b3]);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v3"] = 'Truthy';
    ctx["v1"] = 'before';
    ctx["v2"] = withDefault(ctx['v3'], new LazyValue(value1, ctx, this, node, key + \`\\u00022\`));
    ctx["v1"] = 'after';
    ctx["v3"] = false;
    const b4 = safeOutput(ctx['v2'], node, key, "\\u00023");
    return block1([], [b4]);
  }
}"
`;

exports[`t-set > t-set, multiple t-ifs, and a specific configuration 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<p><div><span>First div</span></div><div><block-child-0/></div></p>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2;
    if (ctx['flag']) {
      ctx["bouh"] = 2;
    }
    if (!ctx['flag']) {
      b2 = text(\`Second\`);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set, t-if, and mix of expression/body lookup, 1 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2;
    if (ctx['flag']) {
      ctx["ourvar"] = \`1\`;
    } else {
      ctx["ourvar"] = 0;
    }
    b2 = safeOutput(ctx['ourvar'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set, t-if, and mix of expression/body lookup, 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2;
    if (ctx['flag']) {
      ctx["ourvar"] = 1;
    } else {
      ctx["ourvar"] = \`0\`;
    }
    b2 = safeOutput(ctx['ourvar'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set, t-if, and mix of expression/body lookup, 3 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2;
    if (ctx['flag']) {
      ctx["ourvar"] = 1;
    } else {
      ctx["ourvar"] = \`0\`;
    }
    b2 = safeOutput(ctx['ourvar'], node, key, "\\u00021");
    return multi([b2]);
  }
}"
`;

exports[`t-set > template made only of t-set renders nothing 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["a"] = 1;
    ctx["b"] = 2;
  return text('');
  }
}"
`;

exports[`t-set > value priority (with non text body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, withDefault, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block2 = createBlock(\`<span>2</span>\`);
  
  function value1(ctx, node, key = "") {
    return block2();
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = withDefault(1, new LazyValue(value1, ctx, this, node, key + \`\\u00021\`));
    const b3 = safeOutput(ctx['value'], node, key, "\\u00022");
    return block1([], [b3]);
  }
}"
`;

exports[`t-set > value priority 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { withDefault, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value"] = withDefault(1, \`2\`);
    const b2 = safeOutput(ctx['value'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;
